[gd_scene load_steps=5 format=3 uid="uid://cotc24jekbbcc"]

[ext_resource type="Script" uid="uid://01u2yoem8btr" path="res://Item/scripts/DefenseGlave.gd" id="1_0w1th"]
[ext_resource type="Texture2D" uid="uid://bwsbt8pbw06rn" path="res://Sprite/spriteimage/item/defenseglaveitem.png" id="2_hfp3j"]
[ext_resource type="Texture2D" uid="uid://pdshxd8cr5xv" path="res://Sprite/spriteimage/defenseglave.png" id="3_vuonx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8umcq"]
radius = 24.0

[node name="DefenseGlave" type="Node2D"]
script = ExtResource("1_0w1th")
radius = 50
speed = 5.0
damage = 4

[node name="ItemSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_hfp3j")
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://Sprite/spriteimage/item",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Sprite/item/defenseglaveitem.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "0e7f4b9d0d93150cdbb19c9ce744ba14"

[node name="UpTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Node" type="Node2D" parent="."]

[node name="Glave" type="Area2D" parent="Node"]
unique_name_in_owner = true
position = Vector2(-91, -12)
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Glave"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_8umcq")

[node name="Sprite2D" type="Sprite2D" parent="Node/Glave"]
texture_filter = 1
position = Vector2(-2, -1)
scale = Vector2(0.714844, 0.75)
texture = ExtResource("3_vuonx")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Sprite/item/defenseglave.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "338737c1f21179997bad08a36931ef5e"

[node name="Glave2" type="Area2D" parent="Node"]
unique_name_in_owner = true
position = Vector2(64, -68)
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Glave2"]
shape = SubResource("CircleShape2D_8umcq")

[node name="Sprite2D2" type="Sprite2D" parent="Node/Glave2"]
texture_filter = 1
position = Vector2(1, 1.43051e-06)
scale = Vector2(0.646126, 0.703125)
texture = ExtResource("3_vuonx")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Sprite/item/defenseglave.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "338737c1f21179997bad08a36931ef5e"

[node name="Glave3" type="Area2D" parent="Node"]
unique_name_in_owner = true
position = Vector2(40, 75)
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Glave3"]
shape = SubResource("CircleShape2D_8umcq")

[node name="Sprite2D2" type="Sprite2D" parent="Node/Glave3"]
texture_filter = 1
position = Vector2(1, -3.57628e-06)
scale = Vector2(0.65625, 0.71875)
texture = ExtResource("3_vuonx")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Sprite/item/defenseglave.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "338737c1f21179997bad08a36931ef5e"

[connection signal="timeout" from="UpTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="area_entered" from="Node/Glave" to="." method="_on_glave_area_entered"]
[connection signal="area_entered" from="Node/Glave2" to="." method="_on_glave_area_entered"]
[connection signal="area_entered" from="Node/Glave3" to="." method="_on_glave_area_entered"]
